--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-python 3.11.14
+python==3.11.14
 annotated-types==0.7.0
 blis==1.3.3
 catalogue==2.0.10
@@ -26,4 +26,5 @@ typing-inspection==0.4.2
 wasabi==1.1.3
 weasel==0.4.3
 wrapt==2.0.1
+
 
