--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ joblib==1.5.3
 murmurhash==1.0.15
 nltk==3.9.2
 numpy==2.4.0
+pandas==2.3.3
 preshed==3.0.12
 pydantic==2.12.5
 pydantic_core==2.41.5
@@ -26,5 +27,6 @@ typing-inspection==0.4.2
 wasabi==1.1.3
 weasel==0.4.3
 wrapt==2.0.1
+
 
 
